--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -6,12 +6,18 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
+  
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
+  
 }
 
 .profile-image {
@@ -20,6 +26,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  
 }
 
 .logo {
@@ -27,7 +34,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
-}
+ }
 
 button {
   border: none;
@@ -45,4 +52,15 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
 }
+
+.left, .right{
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
